--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.0.0",
     "embla-carousel-autoplay": "^8.0.0-rc17",
     "embla-carousel-react": "^8.0.0-rc17",
+    "framer-motion": "^11.0.12",
     "next": "14.0.3",
     "next-themes": "^0.3.0",
     "react": "^18",
